@@ -1,0 +1,3 @@
+<?php defined('SYSPATH') or die('No direct access allowed.');
+
+class Auth_Arm extends Kohana_Auth_Arm { }
